// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmplifyUi test render Container correctly 1`] = `
<div
  className="Section__container___BDYar"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render FormContainer correctly 1`] = `
<div
  className="Form__formContainer___Ht990"
/>
`;

exports[`AmplifyUi test render FormRow correctly 1`] = `
<div
  className="Form__formRow___1uK0u"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render Input correctly 1`] = `
<input
  className="Input__input___1xOOi"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render InputRow correctly 1`] = `
<Component
  theme="theme"
>
  <input
    className="Input__input___1xOOi"
    style={Object {}}
  />
</Component>
`;

exports[`AmplifyUi test render Radio correctly 1`] = `
<input
  className="Input__radio___IHkLQ"
  style={Object {}}
  type="radio"
/>
`;

exports[`AmplifyUi test render RadioRow correctly 1`] = `
<Component
  theme="theme"
>
  <Component
    id="_undefined"
    theme="theme"
  />
  <Component
    htmlFor="_undefined"
    theme="theme"
  />
</Component>
`;

exports[`AmplifyUi test render SectionBody correctly 1`] = `
<div
  className="Section__sectionBody___1n8qJ"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionFooter correctly 1`] = `
<div
  className="Section__sectionFooter___3-RgO"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionFooterPrimaryContent correctly 1`] = `
<span
  className="Section__sectionFooterPrimaryContent___3cJix"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionFooterSecondaryContent correctly 1`] = `
<span
  className="Section__sectionFooterPrimaryContent___3cJix"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionHeader correctly 1`] = `
<div
  className="Section__sectionHeader___2fwDQ"
  style={Object {}}
>
  <Component
    theme="theme"
  />
</div>
`;

exports[`AmplifyUi test render SectionHeaderContent correctly 1`] = `
<span
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SelectInput correctly 1`] = `
<div
  className="SelectInput__selectInput___ki_co"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render Strike correctly 1`] = `
<div
  className="Strike__strike___A-fvN"
  style={Object {}}
>
  <Component
    theme="theme"
  />
</div>
`;

exports[`AmplifyUi test render StrikeContent correctly 1`] = `
<span
  className="Strike__strikeContent___2MQ-l"
/>
`;
